# Scopix-Development-repo

./: .gitignore  Dockerfile  README.md  initenv.sh
back_end/: csv_validation.py  debug_area_calculation.py  eilomea_measurement_engine.py  frame_capture.py  main.py  measurement_engine.py  pyproject.toml  pytest.ini  session_manager.py  test_export.py  test_export.xlsx  video_export_engine.py  video_validation.py
back_end/Resp_Analysis/: Resp_seg_stable.py  main_proc.py
back_end/Resp_Analysis/resp_modules/: Impcalc.py  Resp_seg.py  __init__.py  breath_feature_reshaper.py  breath_segmenter.py  csv_validation.py  dataframe_bytesio.py  dataframe_loader.py  dataframe_validator.py  export_utils.py  extract_to_json.py  file_loader.py  impedance_features.py  pdf_gen.py  plotter.py  reshape_vis.py  resp_plotter.py  zipper.py
back_end/Resp_Analysis/resp_modules/tests/: test_breath_feature_reshaper.py  test_breath_segmenter.py  test_dataframe_bytesio.py  test_dataframe_loader.py  test_dataframe_validator.py  test_export_utils.py  test_file_loader.py  test_gen.py  test_imp_calc.py  test_impedance_feature_extractor.py  test_pdf_export.py  test_plotter.py  test_reshape_for_visualization.py  test_resp_seg.py  test_respiratory_plotter.py  test_zip_writer.py
back_end/api/: export_api.py  plotter_api.py  table_preview_api.py  upload_and_downland_api.py
back_end/test/: run_all_tests.py  test_area_measurement.py  test_formula_calculations.py  test_integration_formulas.py  test_measurement_accuracy.py  test_measurement_engine.py
back_end/uploads/: 5-11-19Hz_20240910_162152.csv
(+61 files in other folders)
