[project]
name = "back-end"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.2",
    "matplotlib>=3.10.3",
    "moviepy>=2.2.1",
    "numpy>=2.3.0",
    "opencv-python-headless>=4.11.0.86",
    "openpyxl>=3.1.5",
    "pandas>=2.3.0",
    "pillow>=11.2.1",
    "pydantic>=2.11.7",
    "pytest>=8.4.1",
    "python-multipart>=0.0.20",
    "requests>=2.32.4",
    "scikit-image>=0.25.2",
    "uvicorn>=0.23.2",
]
